<resources>
    <string name="app_name">链知课堂</string>
    <string name="app_description">链接知识的桥梁</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_userName">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">密码必须由数字或字母组合，长度 6-20</string>
    <string name="login_failed">登录失败！</string>
    <string name="regist_failed">注册失败！</string>

    <string name="courseNameText">课程名称：</string>
    <string name="courseNameTextDemo">这里是课程超长的课程名称这里是课程超长的课程名称这里是课程超长的课程名称这里是课程超长的课程名称</string>
    <string name="courseShortDescText">课程描述：</string>
    <string name="courseShortDescTextDemo">你知道吗这里</string>
    <string name="courseTypeText">课程类型：</string>
    <string name="courseTypeTextDemo">你好哇哇哇哇，想哭</string>
    <string name="courseLabelText">课程特点：</string>
    <string name="courseLabelTextDemo">倒霉倒霉123</string>
    <string name="courseNumberTextDemo">%1d 集</string>
    <string name="watchNumberTextDemo">%1d 次播放</string>

    <string name="home_search">搜索....</string>

    <string name="about">关于链知</string>
    <string name="currentVersion">当前版本：v1.0.0</string>
    <string name="copyright">Copyright © 2019-2020 链知科技网络版权所有</string>

    <string name="hotCourse">热门课程</string>
    <string name="recommendCourse">推荐课程</string>

    <string name="searchHint">搜索课程名称或者视频关键词进行搜索</string>
    <string name="blogSearchContent">关键词、博客内容</string>

    <string name="courseDetail">课程详情</string>
    <string name="cVideoIndex">第%1d集</string>

    <!-- 登录相关 -->
    <string name="need_login">未登录，请先登录！</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_regist">Regist</string>
    <string name="title_activity_show_types">ShowTypesActivity</string>
    <string name="agreementText">
        感谢您选择链知科技网络有限公司出品的链知课堂APP！本协议是您在使用链知课堂时与链知科技网络有限公司（以下简称“链知科技”）所订立的协议。
        \n\n 您注册成功后，即成为链知科技注册用户，用户须对在链知科技的注册信息的真实性、合法性、有效性承担全部责任。您可自行创建、修改昵称，但用户名和昵称的命名及使用应遵守相关法律法规并符合网络道德，不得冒充他人或恶意注册使人误认；不得利用他人的名义发布任何信息；不得恶意使用注册帐号导致其他用户误认；用户名和昵称中不能含有任何侮辱、诽谤、淫秽或暴力等侵害他人合法权益或违反公序良俗的词语。如您违反前述规定，链知有权随时限制或拒绝您使用该账号，甚至注销该账号。
        \n\n 在您使用链知科技相关产品，并产生消费行为，表示您已经具备中华人民共和国法律规定的与您行为相适应的民事行为能力。若您不具备前述与您行为相适应的民事行为能力，您需要在您的监护人陪同下使用本产品。
        </string>

    <string name="contactUs">
        Email: linkknown@163.com
    </string>
    <string name="linkknownCoporate">
           链知科技网络有限公司
        \n 链知课堂
        \n 链知科技文艺部
    </string>
</resources>
